--- a/template/interface_bank.html
+++ b/template/interface_bank.html
@@ -83,8 +83,8 @@
               <li><a href="interface.html"><i class="icon-chevron-right"></i> Dashboard</a></li>
               <li><a href="interface_closed.html"><i class="icon-chevron-right"></i> View All Transactions</a></li>
               <li><a href="interface_friends.html"><i class="icon-chevron-right"></i> View All Friends</a></li>
-              <li class="active"><a href="interface_credit.html"><i class="icon-chevron-right"></i> Add/Delete Credit Card</a></li>
-               <li><a href="interface_bank.html"><i class="icon-chevron-right"></i> Add/Delete Bank Account</a></li>
+              <li ><a href="interface_credit.html"><i class="icon-chevron-right"></i> Add/Delete Credit Card</a></li>
+               <li class="active"><a href="interface_bank.html"><i class="icon-chevron-right"></i> Add/Delete Bank Account</a></li>
               <li><a href="interface_account.html"><i class="icon-chevron-right"></i> Manage Mozi Account</a></li>
               <li><a href="interface_help.html"><i class="icon-chevron-right"></i> Help</a></li>
             </ul>
@@ -96,24 +96,22 @@
 
             <!--COLUMN-->
           <div class="well span8">
-            <h2><i class="icon-pencil" style="position:relative; top: 7px; right: 0px"></i> Add/Delete Credit Cards</h2> 
+            <h2><i class="icon-pencil" style="position:relative; top: 7px; right: 0px"></i> Add/Delete Bank Accounts</h2> 
               <hr style="position:relative; top: -20px; right: 0px">
               
               <div class="span6">
-              <h3>Primary Card</h3>
-              <dl class="dl-horizontal">
-              <dt>Cardholder Name</dt>
+                  <h3>Primary Bank Account</h3>
+            <dl class="dl-horizontal">
+              <dt>Account Holder Name</dt>
               <dd>Christopher T Paquette</dd>
-              <dt>Card Type</dt>
-              <dd>American Express</dt>
-              <dt>Card Number</dt>
-              <dd>************8881</dt>
-             <dt>Billing Address</dt>
-             <dd>142 Front Street</dd>
-             <dd>Apt. 2B</dd>
-             <dd>Binghamton</dd>
-             <dd>NY</dd>
-             <dd>13905-3851</dt>
+              <dt>Bank Name</dt>
+              <dd>JP MORGAN CHASE BANK</dt>
+              <dt>Routing Number</dt>
+              <dd>2012020101</dt>
+              <dt>Account Number</dt>
+              <dd>************3021</dd>
+             <dt>Account Type</dt>
+             <dd>CHECKING</dd>
               </dl>
 
 
@@ -127,20 +125,18 @@
             </div>
 
              <div class="span5">
-              <h3>Secondary Card</h3>
+                 <h3>Secondary Bank Account</h3>
               <dl class="dl-horizontal">
-              <dt>Cardholder Name</dt>
+              <dt>Account Holder Name</dt>
               <dd>Christopher T Paquette</dd>
-              <dt>Card Type</dt>
-              <dd>Visa</dt>
-              <dt>Card Number</dt>
-              <dd>************3661</dt>
-             <dt>Billing Address</dt>
-             <dd>142 Front Street</dd>
-             <dd>Apt. 2B</dd>
-             <dd>Binghamton</dd>
-             <dd>NY</dd>
-             <dd>13905-3851</dt>
+              <dt>Bank Name</dt>
+              <dd>JP MORGAN CHASE BANK</dt>
+              <dt>Routing Number</dt>
+              <dd>2012020101</dt>
+              <dt>Account Number</dt>
+              <dd>************3021</dd>
+             <dt>Account Type</dt>
+             <dd>CHECKING</dd>
               </dl>
 
               <div align="center">
@@ -148,7 +144,7 @@
               <button class="btn btn-info" type="button" ><i class="icon-edit"></i> Edit Card</button>
               <button class="btn btn-danger" type="button" ><i class="icon-trash"></i> Delete Card</button>
              </p>  
-             <button class="btn btn-success" type="button"> <i class="icon-star"></i> Make Primary Card</button>
+             <button class="btn btn-success" type="button"> <i class="icon-star"></i> Make Primary</button>
             </div>
 
 
@@ -189,3 +185,4 @@
 
   </body>
 </html>
+
