--- a/template/css/bootstrap.css
+++ b/template/css/bootstrap.css
@@ -1105,7 +1105,7 @@ input[type="color"],
 input,
 textarea,
 .uneditable-input {
-  width: 206px;
+
 }
 
 textarea {
@@ -1297,7 +1297,7 @@ textarea::-webkit-input-placeholder {
 }
 
 .input-xlarge {
-  width: 270px;
+  width: 396px;
 }
 
 .input-xxlarge {
@@ -3081,10 +3081,10 @@ table th[class*="span"],
 
 .well {
   min-height: 20px;
-  padding: 19px;
+  padding: 10px;
   margin-bottom: 20px;
   background-color: #f5f5f5;
-  border: 2px solid #DEF5FC;
+  border: 0px solid #DEF5FC;
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
           border-radius: 4px;
@@ -3092,6 +3092,21 @@ table th[class*="span"],
      -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
 }
+
+.wellborder {
+  min-height: 0px;
+  padding: 10px;
+  margin-bottom: 0px;
+  background-color: #FFFFFF;
+  border: 2px solid #f5f5f5;
+  -webkit-border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+}
+
 
 
 
