--- a/template/interface_friends.html
+++ b/template/interface_friends.html
@@ -82,8 +82,8 @@
               <li class="nav-header">myMozi Interface</li>
               <li><a href="interface.html"><i class="icon-chevron-right"></i> Dashboard</a></li>
               <li><a href="interface_closed.html"><i class="icon-chevron-right"></i> View All Transactions</a></li>
-              <li><a href="interface_friends.html"><i class="icon-chevron-right"></i> View All Friends</a></li>
-              <li class="active"><a href="interface_credit.html"><i class="icon-chevron-right"></i> Add/Delete Credit Card</a></li>
+              <li class="active"><a href="interface_friends.html"><i class="icon-chevron-right"></i> View All Friends</a></li>
+              <li><a href="interface_credit.html"><i class="icon-chevron-right"></i> Add/Delete Credit Card</a></li>
                <li><a href="interface_bank.html"><i class="icon-chevron-right"></i> Add/Delete Bank Account</a></li>
               <li><a href="interface_account.html"><i class="icon-chevron-right"></i> Manage Mozi Account</a></li>
               <li><a href="interface_help.html"><i class="icon-chevron-right"></i> Help</a></li>
@@ -94,66 +94,72 @@
          <div id="space" style="padding-bottom:15px;">
            &nbsp;  </div>
 
-            <!--COLUMN-->
-          <div class="well span8">
-            <h2><i class="icon-pencil" style="position:relative; top: 7px; right: 0px"></i> Add/Delete Credit Cards</h2> 
-              <hr style="position:relative; top: -20px; right: 0px">
-              
-              <div class="span6">
-              <h3>Primary Card</h3>
-              <dl class="dl-horizontal">
-              <dt>Cardholder Name</dt>
-              <dd>Christopher T Paquette</dd>
-              <dt>Card Type</dt>
-              <dd>American Express</dt>
-              <dt>Card Number</dt>
-              <dd>************8881</dt>
-             <dt>Billing Address</dt>
-             <dd>142 Front Street</dd>
-             <dd>Apt. 2B</dd>
-             <dd>Binghamton</dd>
-             <dd>NY</dd>
-             <dd>13905-3851</dt>
-              </dl>
-
-
-              <div align="center">
-              <p>
-              <button class="btn btn-info" type="button" ><i class="icon-edit"></i> Edit Card</button>
-              <button class="btn btn-danger" type="button"><i class="icon-trash"></i> Delete Card</button></p>  
-            </div>
-
-
-            </div>
-
-             <div class="span5">
-              <h3>Secondary Card</h3>
-              <dl class="dl-horizontal">
-              <dt>Cardholder Name</dt>
-              <dd>Christopher T Paquette</dd>
-              <dt>Card Type</dt>
-              <dd>Visa</dt>
-              <dt>Card Number</dt>
-              <dd>************3661</dt>
-             <dt>Billing Address</dt>
-             <dd>142 Front Street</dd>
-             <dd>Apt. 2B</dd>
-             <dd>Binghamton</dd>
-             <dd>NY</dd>
-             <dd>13905-3851</dt>
-              </dl>
-
-              <div align="center">
-              <p>
-              <button class="btn btn-info" type="button" ><i class="icon-edit"></i> Edit Card</button>
-              <button class="btn btn-danger" type="button" ><i class="icon-trash"></i> Delete Card</button>
-             </p>  
-             <button class="btn btn-success" type="button"> <i class="icon-star"></i> Make Primary Card</button>
-            </div>
-
-
-            </div>
+            <!--TRANSACTION COLUMN-->
             
+          <div class="well span8">
+              <h2><i class="icon-search"></i> View All Friends</h2> 
+            <form class="form-search">
+           <input type="text" class="input-xlarge search-query">
+             <button type="submit" class="btn"><i class="icon-user"></i> Search All Friends</button>
+              </form>
+             
+              
+              <h3>Favorite Friends</h3> <legend></legend>
+           
+              <div class="row" style="padding-left:25px;">
+                  <div class="span3"><h3>hello</h3></div>
+           
+         
+                  <div class="span3"><h3>hello</h3></div>
+          
+                  <div class="span3"><h3>hello</h3></div>
+            
+                  <div class="span3"><h3>hello</h3></div>
+              </div>
+              
+              <div class="row" style="padding-left:25px;">
+                  <div class="span3"><h3>hello</h3></div>
+           
+         
+                  <div class="span3"><h3>hello</h3></div>
+          
+                  <div class="span3"><h3>hello</h3></div>
+            
+                  <div class="span3"><h3>hello</h3></div>
+              </div>
+          
+             
+              
+              <h3>All Friends</h3> <legend></legend>
+              
+              <div class="row" style="padding-left:25px;">
+                  <div class="span2"><h5>hello</h5></div>
+          
+                  <div class="span2"><h5>hello</h5></div>
+          
+                  <div class="span2"><h5>hello</h5></div>
+            
+                  <div class="span2"><h5>hello</h5></div>
+                  
+                  <div class="span2"><h5>hello</h5></div>
+             
+                   <div class="span2"><h5>hello</h5></div>
+              </div>
+              
+              <div class="row" style="padding-left:25px;">
+                  <div class="span2"><h5>hello</h5></div>
+          
+                  <div class="span2"><h5>hello</h5></div>
+          
+                  <div class="span2"><h5>hello</h5></div>
+            
+                  <div class="span2"><h5>hello</h5></div>
+                  
+                  <div class="span2"><h5>hello</h5></div>
+             
+                   <div class="span2"><h5>hello</h5></div>
+              </div>
+                  
 
           </div>
 
