--- a/template/interface_help.html
+++ b/template/interface_help.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Mozi: Twitter-based Payment System</title>
+    <title>Mozi: P2P Payment System</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -17,6 +17,7 @@
       }
     </style>
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="css/docs.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -33,7 +34,7 @@
 
   <body>
 
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar  navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -41,68 +42,69 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="index.html"><img src="images/favicon_white.png" alt="mozi" width="23" height=
-            "23" ALIGN="MIDDLE"></a></a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li><a href="#">Search Places</a></li>
-              <li><a href="#about">For Business</a></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Learn<b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">How It Works</a></li>
-                  <li><a href="#">FAQ</a></li>
-                  <li><a href="#">Testimonials</a></li>
-                  <li class="divider"></li>
-                  <li class="nav-header">Nav header</li>
-                  <li><a href="#">Separated link</a></li>
-                  <li><a href="#">One more separated link</a></li>
-                </ul>
-              </li>
+                <li> <a href="#"><img src="images/favicon_logo.png" alt="mozi" width="60" height=
+            "30" ALIGN="MIDDLE"></a></li>
+            <li>
+                 <input style="position: absolute; top: 10px" type="text" class="input-xlarge search-query" placeholder="Search friends or payments...">
+               </li>
             </ul>
-            <form class="navbar-form pull-right">
-              
-            </form>
+             
+            
+                  
+                 <div style="float:right; padding-top: 3px" class="btn-group">
+                      <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+                   <img src="images/settingicon.png" alt="mozi" width="15" height="15"> Account
+                      <span class="caret"></span>
+                        </a>
+                     <ul class="dropdown-menu">
+                      <!-- log in -->
+                            </ul>
+                    </div>
+              <p style="float:right; padding-top: 12px; padding-right: 10px;" >Chris Paquette</p>
+              <div style="float:right; padding-top: 8px; padding-right: 10px;"><img src="images/userprofileimg.jpg" alt="mozi" width="30" height=
+            "30"></div>
+                  
+            
+            
+           </div>
+           
           </div><!--/.nav-collapse -->
         </div>
       </div>
-    </div>
-
-    <div class="container-fluid">
-      <div class="row-fluid">
+  
+      
+       <div class="container-fluid">
+        <div class="row-fluid">
           <div class="span3 bs-docs-sidebar">
             <ul class="nav nav-list bs-docs-sidenav">
-              <li class="well nav-header">myMozi Interface</li>
-              <li><a href="interface.html"><i class="icon-chevron-right"></i> Recent Transactions</a></li>
-              <li><a href="interface_places.html"><i class="icon-chevron-right"></i> Edit My #places</a></li>
-              <li><a href="interface_credit.html"><i class="icon-chevron-right"></i> Add/Delete Credit Card</a></li>
-              <li ><a href="interface_account.html"><i class="icon-chevron-right"></i> Manage Account</a></li>
-              <li class="active"><a href="interface_help.html"><i class="icon-chevron-right"></i> Help</a></li>
+              <li class="nav-header">myMozi Interface</li>
+              <li><a href="interface.html"><i class="icon-chevron-right"></i> Dashboard</a></li>
+              <li><a href="interface_closed.html"><i class="icon-chevron-right"></i> View All Transactions</a></li>
+              <li><a href="interface_friends.html"><i class="icon-chevron-right"></i> View All Friends</a></li>
+              <li ><a href="interface_credit.html"><i class="icon-chevron-right"></i> Add/Delete Credit Card</a></li>
+               <li><a href="interface_bank.html"><i class="icon-chevron-right"></i> Add/Delete Bank Account</a></li>
+              <li><a href="interface_account.html"><i class="icon-chevron-right"></i> Manage Mozi Account</a></li>
+              <li  class="active"><a href="interface_help.html"><i class="icon-chevron-right"></i> Help</a></li>
             </ul>
-          </div><!--/.well -->
-          <div class="well span9">
-            <div class="row-fluid">
-            <h3>Christopher T. Paquette</h3></div>
-            <div class="row-fluid">
-            <h4 style="position:relative; top: -15px; right: 0px"><img src="images/twitterbird_blue.jpg" height=
-            "30" width="30"> irunthisblock2</h4></div>
-            <div class="row-fluid">
-              <div class="alert alert-error"><i class="icon-warning-sign"></i>    <strong>No credit card linked to this account!</strong> Fix by clicking <a href="#">here</a></div>.
-              <div class="alert alert-block" style="position:relative; top: -25px; right: 0px">
-               <button type="button" class="close" data-dismiss="alert">&times;</button><i class="icon-warning-sign"></i>   
-               <strong>No #home or #work location(s) specified.</strong> Please update your <strong>#places</strong> for orders <a href="#">here</a>.
-                </div>
-              <div class="alert alert-success" style="position:relative; top: -25px; right: 0px"><strong>Update(s) Successful!</strong> You've got a clean bill of health.</div>
-              
-              
-              <h3><i class="icon-wrench" style="position:relative; top: 7px; right: 0px"></i> Help</h3> 
+          </div>
+          
+            
+         <div id="space" style="padding-bottom:15px;">
+           &nbsp;  </div>
+            
+            
+            <!--CENTER COLUMN-->
+          <div class="well span8">
+           <h3><i class="icon-wrench" style="position:relative; top: 7px; right: 0px"></i> Help</h3> 
               <hr style="position:relative; top: -20px; right: 0px">
 
-              <div class="span8" style="position:relative; top: -30px; right: 0px">
+              <div class="span11" style="position:relative; top: -30px; right: 0px">
               	<h6>In order to eliminate the wait of traditional customer service, Mozi offers an e-mail based help line so we can best prepare ourselves before we handle your concerns. Please clearly list any issues you may be having with our service. If there is an issue with a Mozi Business member with regards to payments, please list the merchant below so we can contact them before returning your call.</h6>
               	<h6>If this is an emergency or if fraud is suspected, please call (805) 317-MOZI (6694)</h6>
         		
-        		<textarea rows="9"></textarea>
+        		<textarea cols="120" rows="10"></textarea>
 
 
 
