--- a/template/interface_friends.html
+++ b/template/interface_friends.html
@@ -106,59 +106,264 @@
               
               <h3>Favorite Friends</h3> <legend></legend>
            
-              <div class="row" style="padding-left:25px;">
-                  <div class="span3"><h3>hello</h3></div>
+              <div class="row" style="padding-left:40px;">
+                  <div class="span3">
+                      <div class="span4">
+                      <img src="images/friend1.jpg" alt="mozi" width="75" height="75"></div>
+                    <div class="span7" style="padding-left: 0px">
+                           <b>Jack Hopkins</b><br>
+                           <img src="images/favicon.png" alt="mozi" width="15" height="15"> jhopki103<br>
+                           <a href="#"><small>send money</small></a>
+                           <a href="#"><small>request money</small></a>
+                    </div>
+                     
+                  
+                  </div>
            
          
-                  <div class="span3"><h3>hello</h3></div>
+                  <div class="span3">
+                      <div class="span4">
+                      <img src="images/friend1.jpg" alt="mozi" width="75" height="75"></div>
+                    <div class="span7" style="padding-left: 0px">
+                           <b>Jack Hopkins</b><br>
+                           <img src="images/favicon.png" alt="mozi" width="15" height="15"> jhopki103<br>
+                           <a href="#"><small>send money</small></a>
+                           <a href="#"><small>request money</small></a>
+                    </div>
+                     
+                  
+                  </div>
           
-                  <div class="span3"><h3>hello</h3></div>
+                  <div class="span3">
+                      <div class="span4">
+                      <img src="images/friend1.jpg" alt="mozi" width="75" height="75"></div>
+                    <div class="span7" style="padding-left: 0px">
+                           <b>Jack Hopkins</b><br>
+                           <img src="images/favicon.png" alt="mozi" width="15" height="15"> jhopki103<br>
+                           <a href="#"><small>send money</small></a>
+                           <a href="#"><small>request money</small></a>
+                    </div>
+                     
+                  
+                  </div>
             
-                  <div class="span3"><h3>hello</h3></div>
+                  <div class="span3">
+                      <div class="span4">
+                      <img src="images/friend1.jpg" alt="mozi" width="75" height="75"></div>
+                    <div class="span7" style="padding-left: 0px">
+                           <b>Jack Hopkins</b><br>
+                           <img src="images/favicon.png" alt="mozi" width="15" height="15"> jhopki103<br>
+                           <a href="#"><small>send money</small></a>
+                           <a href="#"><small>request money</small></a>
+                    </div>
+                     
+                  
+                  </div>
               </div>
               
-              <div class="row" style="padding-left:25px;">
-                  <div class="span3"><h3>hello</h3></div>
+            <div class="row" style="padding-left:40px; padding-top:10px">
+                  <div class="span3">
+                      <div class="span4">
+                      <img src="images/friend1.jpg" alt="mozi" width="75" height="75"></div>
+                    <div class="span7" style="padding-left: 0px">
+                           <b>Jack Hopkins</b><br>
+                           <img src="images/favicon.png" alt="mozi" width="15" height="15"> jhopki103<br>
+                           <a href="#"><small>send money</small></a>
+                           <a href="#"><small>request money</small></a>
+                    </div>
+                     
+                  
+                  </div>
            
          
-                  <div class="span3"><h3>hello</h3></div>
+                  <div class="span3">
+                      <div class="span4">
+                      <img src="images/friend1.jpg" alt="mozi" width="75" height="75"></div>
+                    <div class="span7" style="padding-left: 0px">
+                           <b>Jack Hopkins</b><br>
+                           <img src="images/favicon.png" alt="mozi" width="15" height="15"> jhopki103<br>
+                           <a href="#"><small>send money</small></a>
+                           <a href="#"><small>request money</small></a>
+                    </div>
+                     
+                  
+                  </div>
           
-                  <div class="span3"><h3>hello</h3></div>
+                  <div class="span3">
+                      <div class="span4">
+                      <img src="images/friend1.jpg" alt="mozi" width="75" height="75"></div>
+                    <div class="span7" style="padding-left: 0px">
+                           <b>Jack Hopkins</b><br>
+                           <img src="images/favicon.png" alt="mozi" width="15" height="15"> jhopki103<br>
+                           <a href="#"><small>send money</small></a>
+                           <a href="#"><small>request money</small></a>
+                    </div>
+                     
+                  
+                  </div>
             
-                  <div class="span3"><h3>hello</h3></div>
+                  <div class="span3">
+                      <div class="span4">
+                      <img src="images/friend1.jpg" alt="mozi" width="75" height="75"></div>
+                    <div class="span7" style="padding-left: 0px">
+                           <b>Jack Hopkins</b><br>
+                           <img src="images/favicon.png" alt="mozi" width="15" height="15"> jhopki103<br>
+                           <a href="#"><small>send money</small></a>
+                           <a href="#"><small>request money</small></a>
+                    </div>
+                     
+                  
+                  </div>
               </div>
-          
              
               
               <h3>All Friends</h3> <legend></legend>
               
-              <div class="row" style="padding-left:25px;">
-                  <div class="span2"><h5>hello</h5></div>
+              <div class="row" style="padding-left:40px;">
+                   <div class="span2">
+                      <div class="span4">
+                      <img src="images/friend1.jpg" alt="mozi" width="50" height="50"></div>
+                    <div class="span7" style="padding-left: 0px">
+                        <b>Jack Hopkins</b>
+                    </div>
+                   </div>
           
-                  <div class="span2"><h5>hello</h5></div>
+                  <div class="span2">
+                      <div class="span4">
+                      <img src="images/friend1.jpg" alt="mozi" width="50" height="50"></div>
+                    <div class="span7" style="padding-left: 0px">
+                        <b>Jack Hopkins</b>
+                    </div>  </div>
           
-                  <div class="span2"><h5>hello</h5></div>
+          
+                 <div class="span2">
+                      <div class="span4">
+                      <img src="images/friend1.jpg" alt="mozi" width="50" height="50"></div>
+                    <div class="span7" style="padding-left: 0px">
+                        <b>Jack Hopkins</b>
+                    </div>  </div>
+          
             
-                  <div class="span2"><h5>hello</h5></div>
+                 <div class="span2">
+                      <div class="span4">
+                      <img src="images/friend1.jpg" alt="mozi" width="50" height="50"></div>
+                    <div class="span7" style="padding-left: 0px">
+                        <b>Jack Hopkins</b>
+                    </div>  </div>
                   
-                  <div class="span2"><h5>hello</h5></div>
-             
-                   <div class="span2"><h5>hello</h5></div>
+                  <div class="span2">
+                      <div class="span4">
+                      <img src="images/friend1.jpg" alt="mozi" width="50" height="50"></div>
+                    <div class="span7" style="padding-left: 0px">
+                        <b>Jack Hopkins</b>
+                    </div>  </div>
+                  
+                  <div class="span2">
+                      <div class="span4">
+                      <img src="images/friend1.jpg" alt="mozi" width="50" height="50"></div>
+                    <div class="span7" style="padding-left: 0px">
+                        <b>Jack Hopkins</b>
+                    </div>  </div>
+         
               </div>
               
-              <div class="row" style="padding-left:25px;">
-                  <div class="span2"><h5>hello</h5></div>
+               <div class="row" style="padding-left:40px;  padding-top: 10px">
+                   <div class="span2">
+                      <div class="span4">
+                      <img src="images/friend1.jpg" alt="mozi" width="50" height="50"></div>
+                    <div class="span7" style="padding-left: 0px">
+                        <b>Jack Hopkins</b>
+                    </div>
+                   </div>
+                   
+                   <div class="span2">
+                      <div class="span4">
+                      <img src="images/friend1.jpg" alt="mozi" width="50" height="50"></div>
+                    <div class="span7" style="padding-left: 0px">
+                        <b>Jack Hopkins</b>
+                    </div>  </div>
           
-                  <div class="span2"><h5>hello</h5></div>
+                  <div class="span2">
+                      <div class="span4">
+                      <img src="images/friend1.jpg" alt="mozi" width="50" height="50"></div>
+                    <div class="span7" style="padding-left: 0px">
+                        <b>Jack Hopkins</b>
+                    </div>  </div>
           
-                  <div class="span2"><h5>hello</h5></div>
+          
+                 <div class="span2">
+                      <div class="span4">
+                      <img src="images/friend1.jpg" alt="mozi" width="50" height="50"></div>
+                    <div class="span7" style="padding-left: 0px">
+                        <b>Jack Hopkins</b>
+                    </div>  </div>
+          
             
-                  <div class="span2"><h5>hello</h5></div>
+                 <div class="span2">
+                      <div class="span4">
+                      <img src="images/friend1.jpg" alt="mozi" width="50" height="50"></div>
+                    <div class="span7" style="padding-left: 0px">
+                        <b>Jack Hopkins</b>
+                    </div>  </div>
                   
-                  <div class="span2"><h5>hello</h5></div>
-             
-                   <div class="span2"><h5>hello</h5></div>
+                  <div class="span2">
+                      <div class="span4">
+                      <img src="images/friend1.jpg" alt="mozi" width="50" height="50"></div>
+                    <div class="span7" style="padding-left: 0px">
+                        <b>Jack Hopkins</b>
+                    </div>  </div>
+         
               </div>
+              
+              
+                <div class="row" style="padding-left:40px; padding-top: 10px">
+                   <div class="span2">
+                      <div class="span4">
+                      <img src="images/friend1.jpg" alt="mozi" width="50" height="50"></div>
+                    <div class="span7" style="padding-left: 0px">
+                        <b>Jack Hopkins</b>
+                    </div>
+                   </div>
+          
+                  <div class="span2">
+                      <div class="span4">
+                      <img src="images/friend1.jpg" alt="mozi" width="50" height="50"></div>
+                    <div class="span7" style="padding-left: 0px">
+                        <b>Jack Hopkins</b>
+                    </div>  </div>
+          
+          
+                 <div class="span2">
+                      <div class="span4">
+                      <img src="images/friend1.jpg" alt="mozi" width="50" height="50"></div>
+                    <div class="span7" style="padding-left: 0px">
+                        <b>Jack Hopkins</b>
+                    </div>  </div>
+          
+            
+                 <div class="span2">
+                      <div class="span4">
+                      <img src="images/friend1.jpg" alt="mozi" width="50" height="50"></div>
+                    <div class="span7" style="padding-left: 0px">
+                        <b>Jack Hopkins</b>
+                    </div>  </div>
+                  
+                  <div class="span2">
+                      <div class="span4">
+                      <img src="images/friend1.jpg" alt="mozi" width="50" height="50"></div>
+                    <div class="span7" style="padding-left: 0px">
+                        <b>Jack Hopkins</b>
+                    </div>  </div>
+                    
+                    <div class="span2">
+                      <div class="span4">
+                      <img src="images/friend1.jpg" alt="mozi" width="50" height="50"></div>
+                    <div class="span7" style="padding-left: 0px">
+                        <b>Jack Hopkins</b>
+                    </div>  </div>
+         
+              </div>
+              
                   
 
           </div>
