--- a/template/index.html
+++ b/template/index.html
@@ -17,6 +17,7 @@
       }
     </style>
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="css/docs.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -33,7 +34,7 @@
 
   <body>
 
-    <div class="navbar navbar-fixed-top">
+    <div class="navbar  navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -41,71 +42,152 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="index.html"><img src="images/favicon.png" alt="mozi" width="23" height=
-            "23"></a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li><a href="howitworks.html">How It Works</a></li>
-              <li><a href="FAQ.html">FAQ</a></li>
-              <li><a href="business.html">For Business</a></li>
-  
-              </li>
+                <li> <a href="#"><img src="images/favicon_logo.png" alt="mozi" width="60" height=
+            "30" ALIGN="MIDDLE"></a></li>
+               <li><a style="padding-top: 15px" href="howitworks.html">How It Works</a></li>
+              <li><a style="padding-top: 15px" href="FAQ.html">FAQ & Fees</a></li>
+              <li><a style="padding-top: 15px" href="business.html">About</a></li>
             </ul>
-            <div class="btn-group" align="right">
+             
+            
+       <div style="float:right; padding-top: 3px" class="btn-group">
   <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-    Action
+    <i class="icon-lock"></i> Log in
     <span class="caret"></span>
   </a>
   <ul class="dropdown-menu">
-    <!-- dropdown menu links -->
+    <!-- log in -->
   </ul>
 </div>
+            </li>
+            
+           </div>
+           
           </div><!--/.nav-collapse -->
         </div>
       </div>
     </div>
-
-    <div class="span 12">
-
-      <!-- Main hero unit for a primary marketing message or call to action -->
-      <div class="row_header">
-        <div class="span4">
+      
+  <div class="jumbotron masthead">
+  <div class="container">
+     
+      <div class="span 4" style="padding-top: 30px"> 
            <img src="images/mozihandx.jpg" alt="Mozi Hand" style="position:relative; top: 0px; right: 0px">
-        </div>
-        <div class="span8" style= "float:right;">
-        <h1>Welcome to <img src="images/mozi_logo.png" alt="Mozi Logo" width="200" height="150" style="position:relative; top: -16px; right: 10px"></h1>
-        <h3 style="position:relative; top: -15px; right: 0px">Gotta pay your</h3>
-        <div class="row">
-          <div class="span3">
-          <input class="span3" type="text" placeholder="Enter your E-mail">
+      </div>  
+      
+      <div class="span 8" style="padding-top: 75px">
+          <h1>Gotta pay a friend?</h1>
+          <h2>Send money with ease using</h2>
+          <h2 style="position:relative; top: -10px; right: 0px">Facebook, Twitter, E-mail or SMS Text</h2>
+        
+          <div class="row">
+          <a href="howitworks.html" class="btn btn-primary btn-large">Learn about Mozi</a>
+          <a href="signup.html" class="btn btn-success btn-large">Sign Up <small>(It's free!)</small></a>
           </div>
-          <div class="span 2">
-            <a href="C:/bootstrap-master/mySite/signup.html" class="btn btn-primary btn-large" style="position:relative; top: -7px; right: -10px">Join Now <small>(It's free!)</small></a>
-          </div>
+      </div>
+  </div>
+ 
+</div>
+<div class="bs-docs-social">
+  <div class="container">
+    <ul class="bs-docs-social-buttons">
+      <li>
+        <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=twitter&repo=bootstrap&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
+      </li>
+      <li>
+        <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=twitter&repo=bootstrap&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="102px" height="20px"></iframe>
+      </li>
+      <li class="follow-btn">
+        <a href="https://twitter.com/twbootstrap" class="twitter-follow-button" data-link-color="#0069D6" data-show-count="true">Follow @twbootstrap</a>
+      </li>
+      <li class="tweet-btn">
+        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://twitter.github.com/bootstrap/" data-count="horizontal" data-via="twbootstrap" data-related="mdo:Creator of Twitter Bootstrap">Tweet</a>
+      </li>
+    </ul>
+  </div>
+</div>
+    
+        <div id="space" style="padding-bottom:15px;">
+           &nbsp;  </div>
+    
+  <div id="space" style="padding-bottom:25px;">
+           &nbsp;  </div>
+    
+    <h1 style="text-align: center">Welcome to Mozi.</h1>
+    <h3 style="text-align: center">The safest friend-to-friend payment network that's as <u>safe</u> as it <u>simple</u> to use.</h3>
+    
+     <div id="space" style="padding-bottom:100px;">
+           &nbsp;  </div>
+    
+        <div class="span4" style="text-align: center; padding-left: 50px">
+        <h2>Simple</h2>
+        <h5>Pay friends via social media, e-mail and text message with a single click.</h5>
         </div>
+        
+        <div class="span4" style="text-align: center">
+        <h2>Secure</h2>
+        <h5>Mozi uses industry-standard 256-bit SSL Encryption for <u>all</u> account accesses and transactions</h5>
+        </div>
+        
+        <div class="span4" style="text-align: center">
+            <h2>Mobile</h2>
+            <h5>Send money via computer, SMS text message and even Twitter!</h5>
         </div>
     
-      </div>
-    </div>
-
-      <!-- Example row of columns -->
+    
+          <div id="space" style="padding-bottom:200px;">
+           &nbsp;  </div>
+    
+    <h2 style="text-align: center">What's the buzz?</h2>
+    
+    <div class="span4" style="text-align: center; padding-left: 50px">
+        <h2>Simple</h2>
+        <h5>Pay friends via social media, e-mail and text message with a single click.</h5>
+        </div>
+        
+        <div class="span4" style="text-align: center">
+        <h2>Secure</h2>
+        <h5>Mozi uses industry-standard 256-bit SSL Encryption for <u>all</u> account accesses and transactions</h5>
+        </div>
+        
+        <div class="span4" style="text-align: center">
+            <h2>Mobile</h2>
+            <h5>Send money via computer, SMS text message and even Twitter!</h5>
+        </div>
+        
+    
+        
    
+    </div>
+    
+          
+      
+
+      <hr>
+      <div class="span12" style="padding-left:25px">
+        <p>&copy; Mozi <a href="www.mozime.com">MoziMe.com</a> 2013</p>
+     </div>
+
+   
+
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap-transition.js"></script>
-    <script src="js/bootstrap-alert.js"></script>
-    <script src="js/bootstrap-modal.js"></script>
-    <script src="js/bootstrap-dropdown.js"></script>
-    <script src="js/bootstrap-scrollspy.js"></script>
-    <script src="js/bootstrap-tab.js"></script>
-    <script src="js/bootstrap-tooltip.js"></script>
-    <script src="js/bootstrap-popover.js"></script>
-    <script src="js/bootstrap-button.js"></script>
-    <script src="js/bootstrap-collapse.js"></script>
-    <script src="js/bootstrap-carousel.js"></script>
-    <script src="js/bootstrap-typeahead.js"></script>
+    <script src="C:/bootstrap-master/js/jquery.js"></script>
+    <script src="C:/bootstrap-master/js/bootstrap-transition.js"></script>
+    <script src="C:/bootstrap-master/js/bootstrap-alert.js"></script>
+    <script src="C:/bootstrap-master/js/bootstrap-modal.js"></script>
+    <script src="C:/bootstrap-master/js/bootstrap-dropdown.js"></script>
+    <script src="C:/bootstrap-master/js/bootstrap-scrollspy.js"></script>
+    <script src="C:/bootstrap-master/js/bootstrap-tab.js"></script>
+    <script src="C:/bootstrap-master/js/bootstrap-tooltip.js"></script>
+    <script src="C:/bootstrap-master/js/bootstrap-popover.js"></script>
+    <script src="C:/bootstrap-master/js/bootstrap-button.js"></script>
+    <script src="C:/bootstrap-master/js/bootstrap-collapse.js"></script>
+    <script src="C:/bootstrap-master/js/bootstrap-carousel.js"></script>
+    <script src="C:/bootstrap-master/js/bootstrap-typeahead.js"></script>
 
   </body>
 </html>
