--- a/template/index.html
+++ b/template/index.html
@@ -74,7 +74,7 @@
   <div class="container">
      
       <div class="span 4" style="padding-top: 30px"> 
-           <img src="images/mozihandx.jpg" alt="Mozi Hand" style="position:relative; top: 0px; right: 0px">
+           <img src="images/mozihandx.png" alt="Mozi Hand" style="position:relative; top: 0px; right: 0px">
       </div>  
       
       <div class="span 8" style="padding-top: 75px">
@@ -100,7 +100,7 @@
         <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=twitter&repo=bootstrap&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="102px" height="20px"></iframe>
       </li>
       <li class="follow-btn">
-        <a href="https://twitter.com/twbootstrap" class="twitter-follow-button" data-link-color="#0069D6" data-show-count="true">Follow @twbootstrap</a>
+        <a href="https://twitter.com/myMozi" class="twitter-follow-button" data-link-color="#0069D6" data-show-count="true">Follow @myMozi</a>
       </li>
       <li class="tweet-btn">
         <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://twitter.github.com/bootstrap/" data-count="horizontal" data-via="twbootstrap" data-related="mdo:Creator of Twitter Bootstrap">Tweet</a>
@@ -109,55 +109,80 @@
   </div>
 </div>
     
-        <div id="space" style="padding-bottom:15px;">
+        <div id="space" style="padding-bottom:0px;">
            &nbsp;  </div>
     
-  <div id="space" style="padding-bottom:25px;">
+    
+    
+ <div class="container">
+  <div class="marketing">
+    <h1 style="text-align: center; color: #222222">Welcome to Mozi.</h1>
+    <h3 style="text-align: center; color: #5a5a5a">The friend-to-friend payment network that's as <u>safe</u> as it <u>simple</u> to use.</h3>
+    
+     <div id="space" style="padding-bottom:25px;">
            &nbsp;  </div>
     
-    <h1 style="text-align: center">Welcome to Mozi.</h1>
-    <h3 style="text-align: center">The safest friend-to-friend payment network that's as <u>safe</u> as it <u>simple</u> to use.</h3>
-    
-     <div id="space" style="padding-bottom:100px;">
-           &nbsp;  </div>
-    
-        <div class="span4" style="text-align: center; padding-left: 50px">
+     <div class="row-fluid">
+        <div class="span4" style="text-align: center; padding-left: 0px">
+            <img src="images/icon_social.png" style="padding-bottom: 13px; padding-top: 20px;">
         <h2>Simple</h2>
         <h5>Pay friends via social media, e-mail and text message with a single click.</h5>
         </div>
         
         <div class="span4" style="text-align: center">
+        <img src="images/icon_secure.jpg">
         <h2>Secure</h2>
         <h5>Mozi uses industry-standard 256-bit SSL Encryption for <u>all</u> account accesses and transactions</h5>
         </div>
         
         <div class="span4" style="text-align: center">
+            <img src="images/icon_mobile.png" style="padding-bottom: 13px; padding-top: 20px;">
             <h2>Mobile</h2>
             <h5>Send money via computer, SMS text message and even Twitter!</h5>
         </div>
+     </div>
     
+      </div>
+ </div>
+  
     
-          <div id="space" style="padding-bottom:200px;">
+    <hr class="soften" style="margin-bottom: 0px; padding-bottom:0px;">
+    
+  <div class="container">
+  <div class="marketing">
+    
+    <h1 style="text-align: center; font-size: 40px; color: black;">A few ways our friends use Mozi...</h1>
+    
+       <div id="space" style="padding-bottom:25px;">
            &nbsp;  </div>
-    
-    <h2 style="text-align: center">What's the buzz?</h2>
-    
-    <div class="span4" style="text-align: center; padding-left: 50px">
-        <h2>Simple</h2>
-        <h5>Pay friends via social media, e-mail and text message with a single click.</h5>
+  
+         <div class="row-fluid">
+        <div class="span4" style="text-align: center; padding-left: 0px">
+            <h2>Split the check</h2>
+        <img src="images/dinner.jpg" style="padding-bottom: 13px; padding-top: 20px;">
+        
+        <h5>Need a quick spot? Mozi lets users pay back friends when out to eat, shopping, or traveling</h5>
         </div>
         
         <div class="span4" style="text-align: center">
-        <h2>Secure</h2>
-        <h5>Mozi uses industry-standard 256-bit SSL Encryption for <u>all</u> account accesses and transactions</h5>
+        
+            <h2>Pay rent & utilities</h2>
+        <img src="images/housemates.jpg" style="padding-top: 19px;">
+        
+        <h5 style="padding-top: 13px;">Easily manage rent and utility payments from housemates right from your phone</h5>
         </div>
         
         <div class="span4" style="text-align: center">
-            <h2>Mobile</h2>
-            <h5>Send money via computer, SMS text message and even Twitter!</h5>
+            <h2>Buy concert tickets</h2>
+            <img src="images/concert.jpg" style="padding-bottom: 13px; padding-top: 19px;">
+            
+            <h5>Let a friend buy all the tickets at once by using Mozi to quickly pay them back</h5>
         </div>
+     </div>
         
-    
+        
+  </div>
+  </div>
         
    
     </div>
